--- a/PatasDoAmanha/header.html
+++ b/PatasDoAmanha/header.html
@@ -39,7 +39,7 @@
                     <li><a href="/socio.html">Seja Sócio</a></li>
                     <li><a href="/SejaMelhorAmigo.html">Seja melhor amigo</a></li>
                     <li><a href="/empresas.html">Empresas</a></li>
-                    <li><a href="#">Voluntariado</a></li>
+                    <li><a href="/castracao.html">Castração</a></li>
                 </ul>
             </li>
             <li class="nav-list-item"><a href="/index.html">Adote</a></li>
