--- a/PatasDoAmanha/header.html
+++ b/PatasDoAmanha/header.html
@@ -47,6 +47,12 @@
             <!-- <li class="nav-list-item"><a href="">Contato</a></li> -->
         </ul>
     </nav>
+    <iframe
+        src="https://www.chatbase.co/chatbot-iframe/dAwrYzIl3W4ayOgWw6Rd1"
+        width="100%"
+        style="height: 100%; min-height: 700px"
+        frameborder="0"
+    ></iframe>
 
       <!-- <div class="pts-donate-btn">
         <a href="#final" class="pts-donate">Doação</a>
