--- a/PatasDoAmanha/index.html
+++ b/PatasDoAmanha/index.html
@@ -232,6 +232,12 @@
   </div>
 </div>
     <hr class="minha-linha">
+    <iframe
+        src="https://www.chatbase.co/chatbot-iframe/dAwrYzIl3W4ayOgWw6Rd1"
+        width="100%"
+        style="height: 100%; min-height: 700px"
+        frameborder="0"
+    ></iframe>
     <div class="pts-text">
         <h1 class="pts-textDuvidas">Tem alguma dúvida?</h1>
     </div>
